--- a/AnimalCrossing/package.json
+++ b/AnimalCrossing/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
     "ios": "^0.0.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
